--- a/style.css
+++ b/style.css
@@ -1,39 +1,86 @@
 body {
     margin: 0;
+    display: block;
+    font-family: Arial, Helvetica, sans-serif;
 }
+
 .header, .footer {
-    background: rgb(116, 205, 230);
+    background: skyblue;
     padding: 20px;
 }
+
 .content {
     padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: left;
 }
+
 .content p, .content h3, img {
     margin-top: 5px;
-    margin-bottom: 5px;;
+    margin-bottom: 5px;
 }
+
 .connect {
     margin: 0;
     padding: 20px;
 }
+
+.portfolio-container {
+    margin: 20px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 5vw);
+    grid-gap: 15px;
+}
+
+@media only screen and (max-width: 768px) {
+    .portfolio-container {
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(6, 5vw);
+    }
+}
+
+.portfolio-container div {
+    background-color: seagreen;
+}
+
 nav {
     display: flex;
     flex-direction: row;
 }
+
 nav ul {
     margin: 0;
     padding: 0;
     padding-right: 20px;
 }
+
 nav ul li {
     display: flex;
 }
+
+nav ul li a {
+    text-decoration: none;
+    color: black;
+}
+
+#curr-page li a {
+    color: red;
+}
+
+nav ul li a:hover {
+    color: red;
+}
+
+a {
+    color: darkblue;
+}
+
 h1 {
     margin-top: 0;
 }
+
 img {
     width: 250px;
     height: 250px;
