link functionality set up, two links

--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@ body {
 
 .portfolio-container {
     margin: 20px;
-    overflow: hidden;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 30vw);
@@ -48,6 +47,10 @@ body {
     font-weight: bold;
 }
 
+[data-link] {
+    cursor: pointer;
+}
+
 .portfolio-item img {
     height: auto;
     width: auto;
@@ -64,7 +67,7 @@ body {
     border-style: solid;
 }
 
-.portfolio-container div:hover {
+[data-link]:hover {
     color: darkblue;
     border-color: darkblue;
 }
