--- a/style.css
+++ b/style.css
@@ -1,13 +1,25 @@
 body {
-    margin: 0;
-    display: block;
+    padding: 20px;
+    margin-left: 200px;
+    margin-right: 200px;
+    display: flex;
+    flex-direction: column;
     font-family: Arial, Helvetica, sans-serif;
 }
 
+/* header and footer styling */
+
 .header, .footer {
-    background: skyblue;
-    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+
+.footer p {
+    font-style: italic;
+}
+
+/* content styling */
 
 .content {
     padding: 20px;
@@ -21,67 +33,7 @@ body {
     margin-bottom: 5px;
 }
 
-.connect {
-    margin: 0;
-    padding: 20px;
-}
-
-.portfolio-container {
-    margin: 20px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 30vw);
-    grid-gap: 15px;
-}
-
-@media only screen and (max-width: 768px) {
-    .portfolio-container {
-        grid-template-columns: repeat(1, 1fr);
-        grid-template-rows: repeat(6, 30vw);
-    }
-}
-
-.portfolio-container p {
-    text-align: center;
-    font-style: oblique;
-    font-weight: bold;
-}
-
-.portfolio-item {
-    position: relative;  /*makes div clickable*/
-    overflow: hidden;
-}
-
-.portfolio-item:hover {
-    color: blue;
-    border-color: blue;
-}
-
-span {
-    /*makes div clickable*/
-    position: absolute; 
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    z-index: 1;
-}
-
-span:hover {
-    cursor: pointer;
-}
-
-.portfolio-item img {
-    height: auto;
-    width: auto;
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-}
-
-.portfolio-container div {
-    border-style: solid;
-}
+/* navigation bar */
 
 nav {
     display: flex;
@@ -104,22 +56,9 @@ nav ul li a {
 }
 
 #curr-page li a {
-    color: red;
+    text-decoration: underline;
 }
 
 nav ul li a:hover {
     color: red;
-}
-
-a {
-    color: darkblue;
-}
-
-h1 {
-    margin-top: 0;
-}
-
-img {
-    width: 250px;
-    height: 250px;
 }
